# django-smartonetoonefield

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish.yaml
smartonetoonefield/: fields.py
src/: tests.py
