[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-smartonetoonefield"
version = "0.1.0"
description = ""
authors = ["blag <blag@users.noreply.github.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">4.2"
